--- a/requirements-frozen.txt
+++ b/requirements-frozen.txt
@@ -14,13 +14,13 @@ click==6.2
 contextlib2==0.5.1
 decorator==4.0.6
 Django==1.8.19
--e git+https://github.com/coddingtonbear/django-behave.git@79028d59f89c7a12255120d266f5c844656a6805#egg=django_behave
+django_behave==0.1.4
 django-cors-headers==1.1.0
 django-extensions==1.6.1
 django-filter==0.13.0
 django-mailbox==4.4.5
 django-rest-framework==0.1.0
--e git+https://github.com/niwinz/django-sse.git@1351b1387250c412e1adfc33aef0bc9d888d5bbf#egg=django_sse
+django_sse==0.4.1
 django-storages==1.1.8
 django-tastypie==0.13.3
 django-twilio==0.4
@@ -97,7 +97,7 @@ sphinx-rtd-theme==0.1.9
 splinter==0.7.6
 sse==1.2
 subprocess32==3.2.5
--e git+https://github.com/latestrevision/taskw@8e65254fa26f3398faf0f245e6b5b0fcbd5b312d#egg=taskw
+taskw==1.2.0
 tlslite==0.4.9
 traitlets==4.1.0
 trello==0.9.1
