--- a/scripts/vagrant/simple_taskd_configuration.conf
+++ b/scripts/vagrant/simple_taskd_configuration.conf
@@ -6,10 +6,11 @@ pid.file=/var/taskd/taskd.pid
 queue.size=10
 request.limit=1048576
 root=/var/taskd
-server=127.0.0.1:53589
+server=0.0.0.0:53589
 server.cert=/var/taskd/server.cert.pem
 server.key=/var/taskd/server.key.pem
 server.crl=/var/taskd/server.crl.pem
 ca.key=/var/taskd/ca.key.pem
 ca.cert=/var/taskd/ca.cert.pem
-client.allow=^task [2-9],^taskd,^libtaskd,^Mirakel [1-9]
+#client.allow=^task [2-9],^taskd,^libtaskd,^Mirakel [1-9]
+trust=allow all
